skin/frontend/reman/default/css/styles.css
/* ... */
/* ======================================================================================= */

.guest-select {width:305px !important;}

/* REMAN QUICK QUOTE PAGE*/
#steps{
	position: relative;
	float: left;
	width: 601px;
}

#welcome_bunner{
	background:url(../images/top_banner.png) no-repeat;
	width:601px;
	height:75px;
	margin-top:22px;
	padding-top: 8px;
	padding-left: 15px;
	color: #fff;
	font-size: 25px;
	font-weight: bold;
}
/*Group select block*/
#group_select{
	position:relative;
	width:601px;
	float:left;
}
#autotrans{
	background:url(../images/autoTrans.png) no-repeat;
	width:300px;
	height:300px;
	position:relative;
	float:left;
	cursor:pointer;
	text-indent: -10000px;
}

#transcase{
	background:url(../images/tranCase.png) no-repeat;
	width:300px;
	height:300px;
	position:relative;
	float:left;
	text-indent: -10000px;
	cursor:pointer;
}
/* END Group select block*/

/* Steps Info block*/

#steps_info {
	margin-left:10px;
}

#steps_info td{
	font-size:12px;
	color:#000;
	height:20px;
}

#steps_info .step_lable{
	color:#c9282d;
	font-weight:bold;
	width:70px;
	cursor: pointer;
}


.select_part_box{
	position:relative;
	min-width:138px;
	float:left;
	margin-bottom:10px;
}

.select_part_box.block_4{
	clear:both;
}

.select_part_box li {
	cursor:pointer;
	color:#000;
	margin-left:10px;
	margin-top:5px;
	font-size:14px;
}


#parts_tbl .select_part {
	position: relative;
	float: left;
	display:none;
}

#parts_tbl .select_part span {
	margin-right: 10px;
	font-weight: bold;
	position: relative;
	float: left;
	width: 100%;
}


.steps_lable {
	position: relative;
	float: left;
	margin-right: 10px;
	font-weight:bold;
}

#info{
	width: 300px;
	min-height: 90px;
	margin-top:25px;
	border: 1px solid #393939;
	border-radius: 3px;
	position:relative;
	float:left;
	display:none;
}

#info .info_list {
	position:relative;
	float:left;
	margin-top:5px;
	margin-left:5px;
}

#info .info_list .label {
	font-weight:bold;
}

#info .info_list li.search_steps {
	margin-left:10px;
	font-size:12px;
}

#info .info_list li.part_info{
	margin-top: 10px;
	margin-left: 92px;
	margin-bottom:10px;
	font-size: 14px;
	font-weight: bold;
}

#info .info_list li.error {
	text-align: center;
	font-size: 13px;
	font-weight: bold;
	margin-top:13px;
}
/* new design*/
#breadcrumb_info{
	position: relative;
	float: left;
	width: 100%;
	margin-bottom: 15px;
	font-size: 12px;
	color: #233E89;
	margin-left:5px;
}

#breadcrumb_info span {
	position:relative;
	float:left;
	margin-right:5px;
	font-weight:bold;
}

#breadcrumb_info .breadcrumb{
	cursor:pointer;
}

#table_container{
	width: 601px;
	min-height: 360px;
	position: relative;
	float: left;
	padding: 5px;
}

#table_container .list_make{
	position:relative;
	float:left;
	width:601px;
}

#table_container .list{
	position:relative;
	float:left;
	margin-left:12px;
	min-width:160px;
}


#table_container #model_tbl .list {
	min-width:138px !important;
}

#table_container  #year_tbl .list{
	min-width:130px !important;
}

#table_container .list.list_first{
	margin-left:12px !important;
}

/*Year Table*/
#year_tbl, #model_tbl{
	width:601px;
}


#table_container #year_tbl ul, #table_container #model_tbl ul , #table_container #group_select ul{
	position:relative;
	float:left;
	/*margin-left:15px;*/
}

#table_container #year_tbl ul li, #table_container #model_tbl ul li ,  #table_container #group_select ul li{	
	margin-bottom:10px;
}

#table_container .list_make li {
	cursor:pointer;
	float:left;
	margin-right:10px;
}


#table_container .list li {
	cursor:pointer;
	font-size:14px;
	margin-bottom:5px;
	color:#000;
}


#make_tbl .label , #year_tbl .label , #model_tbl .label,  #parts_tbl .label , #group_select .label{
	font-size:14px;
	font-weight:bold;
	padding-bottom:10px;
	position:relative;
	float:left;
	width:100%;
}



.reman_show{
	display:block !important;
}

.reman_hide{
	display:none !important;
}



.reman_visibility_show{
	visibility: visible !important;
}

.reman_visibility_hide{
	visibility: hidden !important;
}


#quote_error{
	position: relative;
	width: 100%;
	float: left;
	height: 20px;
	margin-top: 10px;
	text-align:center;
	color:#E06060;
	font-weight:bold;
}

#assis_info{
	position: relative;
	float: left;
	width: 20%;
	height: 370px;
	border: 1px solid #666;
	margin-left: 5px;
}

#assis_info span{
	position: relative;
	float: left;
	font-size: 14px;
	width: 150px;
	color: black;
	margin-left: 5px;
	line-height: 21px;
}

#assis_info .banner{
	background: url(../images/assis_banner.png) no-repeat;
	height:150px;
	width:150px;
	margin-left: 5px;
	margin-bottom: 5px;
}


#general_info{
	position:relative;
	float:left;
}

#general_info .label {
	padding-right: 5px;
	font-size: 12px;
	width: 100px;
	text-align: right;
	font-weight:bold;
}

#general_info table {
	position:relative;
	float:left;
	margin-left:70px;
	font-size: 12px;
	color: #000;
}

#general_info table tr{
	display:block;
	position:relative;
	height:18px;
}

.disable_by_opacity{
	opacity:0.3;	
}

.enable_by_opacity{
	opacity:1;	
}

#preloader_cont{
	background-color:#F2F2F2;
	width:601px;
	min-height:360px;
	z-index:1;
	position:absolute;
	display:none;
}

#reman_preloader{
	background-image:url(../images/preloader.gif);
	background-repeat:no-repeat;
	position:absolute;
	height:100px;
	width:100px;
	margin-left: 235px;
	margin-top: 105px;
}

.sku{
	color:#000;
}


#product_details_btn{
	width: 100px;
	height: 28px;
	border: 1px solid #999;
	position: relative;
	float: left;
	clear: both;
	margin-top: 30px;
	margin-left: 28px;
	background:url(../images/btn_bg_h31.png) repeat-x;
	text-align:center;
	line-height:28px;
	color:#000;
	cursor:pointer;
}
#product_details_btn a {
	text-decoration:none;
	color:#666;
}

.product_error{
	position: relative;
	font-size: 20px;
	text-align: center;
	top: 35px;
	color: #E06060;
	font-weight: bold;
	clear: left;
}

.reman_page_heading{
	position: relative;
	float: left;
	margin-bottom: 4px;
}
/* ... */

